[build-system]
requires = ["setuptools >= 43.0.0", "wheel"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "scm"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "network",
    "serve_path_via_http",
    "skip_if_adjusted_branch",
    "skip_if_no_network",
    "skip_if_on_windows",
    "skip_if_root",
    "skip_ssh",
    "skip_wo_symlink_capability",
    "slow",
]
